enum_to_enum_derive/tests/examples/bad_effect_type_fail.stderr
error: #[from_enum(Src)] must appear at least once to specify the source enum(s)
 --> $DIR/bad_effect_type_fail.rs:9:1
  |
9 | #[from_enum(Src, effect_typeS = nope)]
  | ^

error[E0601]: `main` function not found in crate `$CRATE`
  --> $DIR/bad_effect_type_fail.rs:1:1
   |
1  | / use enum_to_enum::FromEnum;
2  | |
3  | | #[derive(Debug, Clone, PartialEq, Eq)]
4  | | enum Src {
...  |
11 | |     Case1(String),
12 | | }
   | |_^ consider adding a `main` function to `$DIR/tests/examples/bad_effect_type_fail.rs`
